# Custom-Interpreter

./: CMakeLists.txt  README.md
examples/: README.md  test1.tkm  test2.tkm  test3.tkm  test4.tkm  test5.tkm
examples/lexerExamples/: test2.tkm
examples/lexerExamples/lexerOutput/: test1.txt  test5.txt
examples/lexerOutput/: test2.txt  test3.txt  test4.txt
examples/parserExamples/: test1.tkm  test3.tkm  test4.tkm  test5.tkm
examples/parserExamples/parserOutput/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
include/: interpreter.h  lexer.h  objects.h  parser.h  scope.h  source.h  token.h  value.h
src/: interpreter.cpp  lexer.cpp  main.cpp  objects.cpp  parser.cpp  scope.cpp  source.cpp  token.cpp  value.cpp
test/: test.cpp  testInterpreter.h  testLexer.cpp  testLexer.h  testParser.h
tests/: test1.tkm  test4.tkm  test5.tkm
